fix layout on mobile devices

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,8 @@
 .app {
-  height: 100vh;
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: 1fr;
@@ -14,6 +17,8 @@
 }
 
 .app-main {
+  width: 100%;
+  height: 100%;
   position: relative;
   overflow: hidden;
 }
